--- a/obtain_data.ipynb
+++ b/obtain_data.ipynb
@@ -3,34 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: kaggle in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (1.5.5)\n",
-      "Requirement already satisfied: python-dateutil in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (2.8.0)\n",
-      "Requirement already satisfied: python-slugify in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (3.0.3)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (1.24.1)\n",
-      "Requirement already satisfied: six>=1.10 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (1.12.0)\n",
-      "Requirement already satisfied: requests in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (2.21.0)\n",
-      "Requirement already satisfied: certifi in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (2019.11.28)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kaggle) (4.31.1)\n",
-      "Requirement already satisfied: text-unidecode==1.2 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from python-slugify->kaggle) (1.2)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests->kaggle) (2.8)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\sit_k\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests->kaggle) (3.0.4)\n"
-     ]
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:14:53.711182Z",
+     "iopub.status.busy": "2020-09-14T15:14:53.711182Z",
+     "iopub.status.idle": "2020-09-14T15:14:53.715715Z",
+     "shell.execute_reply": "2020-09-14T15:14:53.714714Z",
+     "shell.execute_reply.started": "2020-09-14T15:14:53.711182Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "!pip install kaggle"
+    "# !pip install kaggle"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:14:53.718479Z",
+     "iopub.status.busy": "2020-09-14T15:14:53.718224Z",
+     "iopub.status.idle": "2020-09-14T15:14:54.100345Z",
+     "shell.execute_reply": "2020-09-14T15:14:54.099116Z",
+     "shell.execute_reply.started": "2020-09-14T15:14:53.718479Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -42,57 +40,22 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:14:54.104009Z",
+     "iopub.status.busy": "2020-09-14T15:14:54.103011Z",
+     "iopub.status.idle": "2020-09-14T15:14:54.990287Z",
+     "shell.execute_reply": "2020-09-14T15:14:54.989291Z",
+     "shell.execute_reply.started": "2020-09-14T15:14:54.104009Z"
+    }
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.5.6 / client 1.5.5)\n",
-      "Downloading shops.csv to data\n",
-      "\n",
-      "Downloading item_categories.csv to data\n",
-      "\n",
-      "Downloading test.csv.zip to data\n",
-      "\n",
-      "Downloading sample_submission.csv.zip to data\n",
-      "\n",
-      "Downloading items.csv.zip to data\n",
-      "\n",
-      "Downloading sales_train.csv.zip to data\n",
-      "\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  0%|          | 0.00/2.91k [00:00<?, ?B/s]\n",
-      "100%|##########| 2.91k/2.91k [00:00<00:00, 2.99MB/s]\n",
-      "\n",
-      "  0%|          | 0.00/3.49k [00:00<?, ?B/s]\n",
-      "100%|##########| 3.49k/3.49k [00:00<00:00, 1.83MB/s]\n",
-      "\n",
-      "  0%|          | 0.00/1.02M [00:00<?, ?B/s]\n",
-      " 98%|#########7| 1.00M/1.02M [00:00<00:00, 6.01MB/s]\n",
-      "100%|##########| 1.02M/1.02M [00:00<00:00, 6.05MB/s]\n",
-      "\n",
-      "  0%|          | 0.00/468k [00:00<?, ?B/s]\n",
-      "100%|##########| 468k/468k [00:00<00:00, 10.5MB/s]\n",
-      "\n",
-      "  0%|          | 0.00/368k [00:00<?, ?B/s]\n",
-      "100%|##########| 368k/368k [00:00<00:00, 12.2MB/s]\n",
-      "\n",
-      "  0%|          | 0.00/13.3M [00:00<?, ?B/s]\n",
-      " 15%|#5        | 2.00M/13.3M [00:00<00:01, 11.0MB/s]\n",
-      " 30%|###       | 4.00M/13.3M [00:00<00:00, 10.9MB/s]\n",
-      " 45%|####5     | 6.00M/13.3M [00:00<00:00, 9.75MB/s]\n",
-      " 60%|######    | 8.00M/13.3M [00:00<00:00, 10.2MB/s]\n",
-      " 75%|#######5  | 10.0M/13.3M [00:01<00:00, 10.5MB/s]\n",
-      " 83%|########2 | 11.0M/13.3M [00:01<00:00, 10.4MB/s]\n",
-      " 98%|#########7| 13.0M/13.3M [00:01<00:00, 10.7MB/s]\n",
-      "100%|##########| 13.3M/13.3M [00:01<00:00, 10.4MB/s]\n"
+      "usage: kaggle [-h] [-v] {competitions,c,datasets,d,kernels,k,config} ...\n",
+      "kaggle: error: unrecognized arguments: c competitive-data-science-predict-future-sales - p data\n"
      ]
     }
    ],
@@ -103,7 +66,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:14:54.992283Z",
+     "iopub.status.busy": "2020-09-14T15:14:54.992283Z",
+     "iopub.status.idle": "2020-09-14T15:14:55.004847Z",
+     "shell.execute_reply": "2020-09-14T15:14:55.003338Z",
+     "shell.execute_reply.started": "2020-09-14T15:14:54.992283Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pwd = os.getcwd()\n",
@@ -113,17 +84,34 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:14:55.006824Z",
+     "iopub.status.busy": "2020-09-14T15:14:55.006326Z",
+     "iopub.status.idle": "2020-09-14T15:14:55.054388Z",
+     "shell.execute_reply": "2020-09-14T15:14:55.052395Z",
+     "shell.execute_reply.started": "2020-09-14T15:14:55.006824Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['items.csv.zip',\n",
+       "['final_df.csv',\n",
+       " 'items.csv',\n",
        " 'item_categories.csv',\n",
-       " 'sales_train.csv.zip',\n",
-       " 'sample_submission.csv.zip',\n",
+       " 'sales_train.csv',\n",
+       " 'sample_submission.csv',\n",
        " 'shops.csv',\n",
-       " 'test.csv.zip']"
+       " 'submission.csv',\n",
+       " 'submission_naive.csv',\n",
+       " 'submission_naiveLM.csv',\n",
+       " 'submission_reg.csv',\n",
+       " 'submission_rfc.csv',\n",
+       " 'submission_sar.csv',\n",
+       " 'submission_xgb.csv',\n",
+       " 'test.csv',\n",
+       " 'train_df.csv']"
       ]
      },
      "execution_count": 5,
@@ -138,7 +126,15 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:14:55.057381Z",
+     "iopub.status.busy": "2020-09-14T15:14:55.056383Z",
+     "iopub.status.idle": "2020-09-14T15:14:55.066436Z",
+     "shell.execute_reply": "2020-09-14T15:14:55.065364Z",
+     "shell.execute_reply.started": "2020-09-14T15:14:55.057381Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for item in os.listdir(dir_name):  # loop through items in dir\n",
