--- a/regtest.ipynb
+++ b/regtest.ipynb
@@ -24,7 +24,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.status.idle": "2020-09-14T15:36:31.461510Z",
+     "shell.execute_reply": "2020-09-14T15:36:31.461510Z",
+     "shell.execute_reply.started": "2020-09-14T15:36:27.038222Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -55,7 +61,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:36:31.472673Z",
+     "iopub.status.busy": "2020-09-14T15:36:31.471271Z",
+     "iopub.status.idle": "2020-09-14T15:36:44.151343Z",
+     "shell.execute_reply": "2020-09-14T15:36:44.150297Z",
+     "shell.execute_reply.started": "2020-09-14T15:36:31.472673Z"
+    }
+   },
    "outputs": [],
    "source": [
     "raw_df = pd.read_csv('data/train_df.csv', parse_dates=['date'])\n",
@@ -77,7 +91,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:36:44.154414Z",
+     "iopub.status.busy": "2020-09-14T15:36:44.153438Z",
+     "iopub.status.idle": "2020-09-14T15:36:44.701700Z",
+     "shell.execute_reply": "2020-09-14T15:36:44.700698Z",
+     "shell.execute_reply.started": "2020-09-14T15:36:44.154414Z"
+    }
+   },
    "outputs": [],
    "source": [
     "raw_df['month'] = raw_df['date'].dt.month"
@@ -86,7 +108,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:36:44.703828Z",
+     "iopub.status.busy": "2020-09-14T15:36:44.703828Z",
+     "iopub.status.idle": "2020-09-14T15:36:45.748181Z",
+     "shell.execute_reply": "2020-09-14T15:36:45.748181Z",
+     "shell.execute_reply.started": "2020-09-14T15:36:44.703828Z"
+    }
+   },
    "outputs": [],
    "source": [
     "month_df = raw_df.groupby(['date_block_num', 'shop_id', 'item_category_id', 'month']).agg(\n",
@@ -96,7 +126,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:36:45.753377Z",
+     "iopub.status.busy": "2020-09-14T15:36:45.753175Z",
+     "iopub.status.idle": "2020-09-14T15:36:45.868322Z",
+     "shell.execute_reply": "2020-09-14T15:36:45.867298Z",
+     "shell.execute_reply.started": "2020-09-14T15:36:45.753377Z"
+    }
+   },
    "outputs": [],
    "source": [
     "month_df_flat = pd.get_dummies(\n",
@@ -106,7 +144,15 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:36:45.872019Z",
+     "iopub.status.busy": "2020-09-14T15:36:45.871396Z",
+     "iopub.status.idle": "2020-09-14T15:36:45.941848Z",
+     "shell.execute_reply": "2020-09-14T15:36:45.939688Z",
+     "shell.execute_reply.started": "2020-09-14T15:36:45.872019Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -315,7 +361,15 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:36:45.945476Z",
+     "iopub.status.busy": "2020-09-14T15:36:45.944580Z",
+     "iopub.status.idle": "2020-09-14T15:36:46.000225Z",
+     "shell.execute_reply": "2020-09-14T15:36:45.999204Z",
+     "shell.execute_reply.started": "2020-09-14T15:36:45.945476Z"
+    }
+   },
    "outputs": [],
    "source": [
     "X = month_df_flat.iloc[:, 2:]\n",
@@ -325,7 +379,15 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-14T15:36:46.005857Z",
+     "iopub.status.busy": "2020-09-14T15:36:46.004859Z",
+     "iopub.status.idle": "2020-09-14T15:36:47.593143Z",
+     "shell.execute_reply": "2020-09-14T15:36:47.592145Z",
+     "shell.execute_reply.started": "2020-09-14T15:36:46.005857Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -342,10 +404,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>           <td>   502.6</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 10 Apr 2020</td> <th>  Prob (F-statistic):</th>            <td>  0.00</td>   \n",
+       "  <th>Date:</th>             <td>Mon, 14 Sep 2020</td> <th>  Prob (F-statistic):</th>            <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>20:25:51</td>     <th>  Log-Likelihood:    </th>          <td>-3.7729e+05</td>\n",
+       "  <th>Time:</th>                 <td>08:36:47</td>     <th>  Log-Likelihood:    </th>          <td>-3.7729e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 62345</td>      <th>  AIC:               </th>           <td>7.549e+05</td> \n",
@@ -850,8 +912,8 @@
        "Dep. Variable:           item_cnt_day   R-squared (uncentered):                   0.554\n",
        "Model:                            OLS   Adj. R-squared (uncentered):              0.553\n",
        "Method:                 Least Squares   F-statistic:                              502.6\n",
-       "Date:                Fri, 10 Apr 2020   Prob (F-statistic):                        0.00\n",
-       "Time:                        20:25:51   Log-Likelihood:                     -3.7729e+05\n",
+       "Date:                Mon, 14 Sep 2020   Prob (F-statistic):                        0.00\n",
+       "Time:                        08:36:47   Log-Likelihood:                     -3.7729e+05\n",
        "No. Observations:               62345   AIC:                                  7.549e+05\n",
        "Df Residuals:                   62191   BIC:                                  7.563e+05\n",
        "Df Model:                         154                                                  \n",
